--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
+streamlit
+os
+json
+asyncio
+sys
+pathlib
+logging
+python-dotenv
 pytesseract
 pillow
 transformers
 groq
-python-dotenv
 PyPDF2
-data-prep-toolkit>=0.2.3.dev0
 data-prep-toolkit>=0.2.3.dev1
+matplotlib
+numpy
+sklearn
+torch
+sentence-transformers
+pdf2image
+reportlab
+ibm-watsonx-ai
+deepsearch-glm==0.26.1
+docling-core==2.3.0
+docling-ibm-models==2.0.3
+docling==2.3.1
+filetype>=1.2.0,<2.0.0
+faiss-cpu
+pandas
+kfp
+boto3
+pyarrow
