--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-streamlit
-os
-json
-asyncio
-sys
-pathlib
-logging
-python-dotenv
-pytesseract
-pillow
-transformers
-groq
-PyPDF2
-data-prep-toolkit>=0.2.3.dev1
-matplotlib
-numpy
-sklearn
-torch
-sentence-transformers
-pdf2image
-reportlab
-ibm-watsonx-ai
+streamlit==1.45.1
+pandas==1.5.3
+numpy==1.23.5
+python-dotenv==0.21.1
+easyocr==1.7.1
+pytesseract==0.3.10
+pillow==9.5.0
+transformers==4.30.1
+PyPDF2==3.0.1
+data-prep-toolkit==0.2.3
+matplotlib==3.7.1
+scikit-learn==1.2.2
+torch==1.13.1
+sentence-transformers==2.2.2
+pdf2image==1.16.3
+reportlab==4.0.0
+ibm-watsonx-ai==0.1.2
 deepsearch-glm==0.26.1
+filetype==1.2.0
+faiss-cpu==1.7.4
+kfp==2.0.1
+boto3==1.34.69
+pyarrow==16.1.0
+ibm-watson>=6.0.0,<7.0.0
+ibm-cloud-sdk-core>=3.10.0,<4.0.0
+ibm-generative-ai>=0.10.0
 docling-core==2.3.0
 docling-ibm-models==2.0.3
 docling==2.3.1
 filetype>=1.2.0,<2.0.0
-faiss-cpu
-pandas
-kfp
-boto3
-pyarrow
+
+
