--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,50 @@
-streamlit==1.45.1
-pandas==1.5.3
-numpy==1.23.5
-python-dotenv==0.21.1
-easyocr==1.7.1
-pytesseract==0.3.10
-pillow==9.5.0
-transformers==4.30.1
+# Core Web App
+streamlit==1.45.0
+python-dotenv==1.0.0
+
+# Data Handling
+pandas==2.1.4
+numpy==1.26.4
+pyarrow==16.1.0
+boto3==1.34.69
+
+# Image and OCR
+pillow==10.3.0
+pdf2image==1.17.0
+easyocr==1.7.2
+pytesseract==0.3.13
+
+# NLP and Transformers
+transformers==4.41.1
+sentence-transformers==4.0.1
+torch==2.6.0
+
+# PDF and Document Processing
 PyPDF2==3.0.1
-data-prep-toolkit==0.2.3
+reportlab==4.4.0
+
+# Visualization and ML
 matplotlib==3.7.1
 scikit-learn==1.2.2
-torch==1.13.1
-sentence-transformers==2.2.2
-pdf2image==1.16.3
-reportlab==4.0.0
-ibm-watsonx-ai==0.1.2
-deepsearch-glm==0.26.1
+
+# Data Prep and Utility
+data-prep-toolkit==0.2.3
 filetype==1.2.0
+
+# Vector Search
 faiss-cpu==1.7.4
-kfp==2.0.1
-boto3==1.34.69
-pyarrow==16.1.0
-ibm-watson>=6.0.0,<7.0.0
-ibm-cloud-sdk-core>=3.10.0,<4.0.0
-ibm-generative-ai>=0.10.0
-docling-core==2.3.0
+
+# IBM Watson and Related SDKs
+ibm-watson==6.0.0
+ibm-cloud-sdk-core==3.10.0
+ibm-generative-ai==3.0.0
+ibm-watsonx-ai==0.1.2
+
+# Deepsearch & Docling
+
+docling-core==2.4.0
 docling-ibm-models==2.0.3
 docling==2.3.1
-filetype>=1.2.0,<2.0.0
 
-
+# Kubeflow Pipelines
+kfp==2.0.1
